--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
+  responsive_framework: ^0.1.4
+  url_launcher: ^6.1.0
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
