--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
-  responsive_framework: ^0.1.4
+  responsive_framework: ^0.1.7
   url_launcher: ^6.1.0
   lottie: ^1.3.0
+  flutter_styled_toast: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/icons/
+    - assets/images/
+    - assets/fonts/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
