--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.1.0
   lottie: ^1.3.0
   flutter_styled_toast: ^2.0.0
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
