web favicon changed

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "resume_web",
-    "short_name": "resume_web",
+    "name": "Resume",
+    "short_name": "Resume",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
