--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^1.3.0
   flutter_styled_toast: ^2.0.0
   photo_view: ^0.13.0
+  easy_localization: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
     - assets/fonts/
     - assets/animations/
     - assets/outputs/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
