--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_styled_toast: ^2.2.1
   photo_view: ^0.14.0
   easy_localization: ^3.0.3
+  flutter_animate: ^4.3.0
 
 dev_dependencies:
   flutter_test:
